# pgm_sobel_edge_detection

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  Makefile
include/edge_detection/: edge_detection.h
include/pgm/: pgm.h
include/sobel_operator/: sobel_operator.h
include/time_measurement/: time_measurement.h
src/: main.c
src/edge_detection/: edge_detection.c
src/pgm/: pgm.c
src/sobel_operator/: sobel_operator.c
src/time_measurement/: time_measurement.c
